--- a/InsureNav-Backend/package.json
+++ b/InsureNav-Backend/package.json
@@ -1,15 +1,31 @@
 {
   "name": "insurenav-backend",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Backend for InsureNav application",
+  "main": "server.js",
   "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": [
+    "insurance",
+    "chatbot",
+    "nodejs",
+    "express",
+    "mongodb"
+  ],
+  "author": "Your Team Name",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.21.0"
+    "bcryptjs": "^2.4.3",
+    "dotenv": "^16.4.5",
+    "express": "^4.21.1",
+    "express-validator": "^7.2.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.7.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   }
 }
