--- a/InsureNav-Backend/.env
+++ b/InsureNav-Backend/.env
@@ -1,4 +1,4 @@
-MONGODB_URI=mongodb+srv://kbhavake:jO12m9IcNpXaVris@cluster0.9fpd0.mongodb.net/InsureNav?retryWrites=true&w=majority&appName=Cluster0
+MONGODB_URI=mongodb+srv://<username>:<password>@cluster0.9fpd0.mongodb.net/InsureNav?retryWrites=true&w=majority&appName=Cluster0
 
 #MONGODB_URI=mongodb+srv://<username>:<password>@cluster0.9fpd0.mongodb.net/InsureNav?retryWrites=true&w=majority&appName=Cluster0
 
