--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@clerk/clerk-react": "^5.11.0",
+    "@clerk/themes": "^2.1.35",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
